--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.6.0
+  provider: ^6.1.5+1
+  shared_preferences: ^2.5.4
+  path_provider: ^2.1.5
+  uuid: ^4.5.2
+  share_plus: ^12.0.1
+  gal: ^2.3.2
 
 dev_dependencies:
   flutter_test:
